--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.103", features = ["derive"] }
 serde_json = "1.0.42"
-reqwest = "0.9.22"
+reqwest = "~0.9.17"
 base64 = "0.11.0"
 log = "0.4"
 env_logger = "0.7.1"
+humantime = "1.3.0"
+rspotify = "0.7.0"
